--- a/caketheme.com/html/mojuri/shop-checkout.html
+++ b/caketheme.com/html/mojuri/shop-checkout.html
@@ -636,7 +636,7 @@
 											<div class="block-content">
 												<ul>
 													<li>
-														<span>Head Office:</span> 26 Wyle Cop, Shrewsbury, Shropshire, SY1 1XD
+														<span>Head Office:</span> 26 Cross Cut Street, Gandhipuram, Coimbatore
 													</li>
 													<li>
 														<span>Tel:</span> 01743 234500
@@ -652,8 +652,7 @@
 											<ul class="social-link">
 												<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 												<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-												<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-												<li><a href="#"><i class="fa fa-behance"></i></a></li>
+												
 											</ul>
 										</div>
 									</div>
@@ -755,9 +754,7 @@
 									</div>
 									<div class="col-md-6">
 										<div class="footer-right">
-											<div class="block block-image">
-												<img width="309" height="32" src="media/payments.png" alt="">
-											</div>
+											
 										</div>
 									</div>
 								</div>
