--- a/caketheme.com/html/mojuri/page-contact.html
+++ b/caketheme.com/html/mojuri/page-contact.html
@@ -327,7 +327,7 @@
 										<!-- Block Contact Map -->
 										<div class="block block-contact-map">
 											<div class="block-widget-wrap">
-												<iframe src="https://maps.google.com/maps?q=London%20Eye%2C%20London%2C%20United%20Kingdom&amp;t=m&amp;z=10&amp;output=embed&amp;iwloc=near" aria-label="London Eye, London, United Kingdom"></iframe>
+												<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15665.120055800347!2d76.95710774595878!3d11.017605188658797!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba85855910aed83%3A0x80875de5cd370a9d!2sGandhipuram%2C%20Tamil%20Nadu%20641012!5e0!3m2!1sen!2sin!4v1701876290353!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 											</div>
 										</div>
 									</div>
@@ -363,7 +363,7 @@
 																</div>
 																<div class="item-content">
 																	<p>Monday to Friday</p>
-																	<p>8:00am – 4:00pm Sydney, NSW time (UTC +10)</p>
+																	<p>8:00am – 4:00pm Coimbatore, IST time (UTC +5.30)</p>
 																	<p>Saturday and Sunday closed</p>
 																</div>
 															</div>
@@ -395,7 +395,7 @@
 													<div class="sub-title">We’ll get back to you within two days.</div>
 												</div>
 												<div class="block-content">
-													<form action="#" method="post" class="contact-form" novalidate="novalidate">
+													<form action="https://formspree.io/f/xwkdgvpo" method="post" class="contact-form" novalidate="novalidate">
 														<div class="contact-us-form">
 															<div class="row">
 																<div class="col-sm-12 col-md-6">
@@ -447,7 +447,7 @@
 											<div class="block-content">
 												<ul>
 													<li>
-														<span>Head Office:</span> 26 Wyle Cop, Shrewsbury, Shropshire, SY1 1XD
+														<span>Head Office:</span> 26 Cross Cut Street, Gandhipuram, Coimbatore
 													</li>
 													<li>
 														<span>Tel:</span> 01743 234500
@@ -463,8 +463,7 @@
 											<ul class="social-link">
 												<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 												<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-												<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-												<li><a href="#"><i class="fa fa-behance"></i></a></li>
+												
 											</ul>
 										</div>
 									</div>
@@ -566,9 +565,7 @@
 									</div>
 									<div class="col-md-6">
 										<div class="footer-right">
-											<div class="block block-image">
-												<img width="309" height="32" src="media/payments.png" alt="">
-											</div>
+											
 										</div>
 									</div>
 								</div>
