--- a/caketheme.com/html/mojuri/page-about.html
+++ b/caketheme.com/html/mojuri/page-about.html
@@ -731,7 +731,7 @@
 											<div class="block-content">
 												<ul>
 													<li>
-														<a href="shop-grid-left.html">Contact Us</a>
+														<a href="page-contact.html">Contact Us</a>
 													</li>
 													<li>
 														<a href="shop-grid-left.html">Track Your Order</a>
