--- a/caketheme.com/html/mojuri/shop-details.html
+++ b/caketheme.com/html/mojuri/shop-details.html
@@ -821,7 +821,7 @@
 											<div class="block-content">
 												<ul>
 													<li>
-														<a href="shop-grid-left.html">Contact Us</a>
+														<a href="page-contact.html">Contact Us</a>
 													</li>
 													<li>
 														<a href="shop-grid-left.html">Track Your Order</a>
