--- a/caketheme.com/html/mojuri/index.html
+++ b/caketheme.com/html/mojuri/index.html
@@ -7,7 +7,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Home Collection | Mojuri</title>
+		<title>Home Collection | virtual TryOn</title>
 		
 		<!-- Favicon -->
 		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.png">
@@ -72,16 +72,16 @@
 														<li class="mini-cart-item">
 															<a href="#" class="remove" title="Remove this item"><i class="icon_close"></i></a>
 															<a href="shop-details.html" class="product-image"><img width="600" height="600" src="media/product/3.jpg" alt=""></a>
-															<a href="shop-details.html" class="product-name">Twin Hoops</a>		
+															<a href="shop-details.html" class="product-name">Earrings</a>		
 															<div class="quantity">Qty: 1</div>
-															<div class="price">$150.00</div>
+															<div class="price">$110.00</div>
 														</li>
 														<li class="mini-cart-item">
 															<a href="#" class="remove" title="Remove this item"><i class="icon_close"></i></a>													
 															<a href="shop-details.html" class="product-image"><img width="600" height="600" src="media/product/1.jpg" alt=""></a>
-															<a href="shop-details.html" class="product-name">Medium Flat Hoops</a>
+															<a href="shop-details.html" class="product-name">Dollar</a>
 															<div class="quantity">Qty: 1</div>
-															<div class="price">$100.00</div>						
+															<div class="price">$150.00</div>						
 														</li>
 													</ul>
 													<div class="total-cart">
@@ -283,16 +283,16 @@
 																<li class="mini-cart-item">
 																	<a href="#" class="remove" title="Remove this item"><i class="icon_close"></i></a>
 																	<a href="shop-details.html" class="product-image"><img width="600" height="600" src="media/product/3.jpg" alt=""></a>
-																	<a href="shop-details.html" class="product-name">Twin Hoops</a>		
+																	<a href="shop-details.html" class="product-name">Earrings</a>		
 																	<div class="quantity">Qty: 1</div>
 																	<div class="price">$150.00</div>
 																</li>
 																<li class="mini-cart-item">
 																	<a href="#" class="remove" title="Remove this item"><i class="icon_close"></i></a>													
 																	<a href="shop-details.html" class="product-image"><img width="600" height="600" src="media/product/1.jpg" alt=""></a>
-																	<a href="shop-details.html" class="product-name">Medium Flat Hoops</a>
+																	<a href="shop-details.html" class="product-name">dollar</a>
 																	<div class="quantity">Qty: 1</div>
-																	<div class="price">$100.00</div>						
+																	<div class="price">$150.00</div>						
 																</li>
 															</ul>
 															<div class="total-cart">
@@ -336,7 +336,7 @@
 												<div class="item-info horizontal-center vertical-middle text-center">
 													<div class="content">
 														<div class="subtitle-slider">TRANSPARENT. HONEST. REVOLUTIONARY.</div>
-														<h2 class="title-slider">Spring Collection</h2>
+														<h2 class="title-slider">Marriage Collection</h2>
 														<a class="button button-slider button-black" href="shop-grid-left.html">SHOP NOW</a>
 													</div>
 												</div>
@@ -383,10 +383,10 @@
 												<img width="120" height="107" src="media/banner/intro-2.png" alt="">
 											</div>
 											<h2 class="intro-title">
-										 		MOJURI JEWERLY
+										 		JEWERLY
 											</h2>
 											<div class="intro-text">
-												To provide the best designer jewelry at a reasonable price, while revolutionizing the jewelry industry with transparency and honesty.
+												Our beautiful jewelry pieces combine make every moment radiant and memorable.jewellery collection that transforms any occasion into a celebration of style and grace.
 											</div>
 										</div>
 									</div>
@@ -519,10 +519,10 @@
 																	<div class="products-content">
 																		<div class="contents">
 																			<div class="rating">
-																				<div class="star star-0"></div><span class="count">(0 review)</span>
+																				<div class="star star-3"></div><span class="count">(2 review)</span>
 																			</div>
-																			<h3 class="product-title"><a href="shop-details.html">Medium Flat Hoops</a></h3>
-																			<span class="price">$100.00</span>
+																			<h3 class="product-title"><a href="shop-details.html">Dollar</a></h3>
+																			<span class="price">$150.00</span>
 																		</div>
 																	</div>
 																</div>
@@ -562,7 +562,7 @@
 																			<div class="rating">
 																				<div class="star star-5"></div><span class="count">(1 review)</span>
 																			</div>
-																			<h3 class="product-title"><a href="shop-details.html">Bold Pearl Hoop Earrings</a></h3>
+																			<h3 class="product-title"><a href="shop-details.html">Platinum earrings</a></h3>
 																			<span class="price">
 																				<del aria-hidden="true"><span>$200.00</span></del>
 																				<ins><span>$180.00</span></ins>
@@ -605,7 +605,7 @@
 																			<div class="rating">
 																				<div class="star star-0"></div><span class="count">(0 review)</span>
 																			</div>
-																			<h3 class="product-title"><a href="shop-details.html">Twin Hoops</a></h3>
+																			<h3 class="product-title"><a href="shop-details.html">Earrings</a></h3>
 																			<span class="price">$150.00</span>
 																		</div>
 																	</div>
@@ -645,7 +645,7 @@
 																			<div class="rating">
 																				<div class="star star-4"></div><span class="count">(2 reviews)</span>
 																			</div>
-																			<h3 class="product-title"><a href="shop-details.html">Yilver And Turquoise Earrings</a></h3>
+																			<h3 class="product-title"><a href="shop-details.html">Platinum rings</a></h3>
 																			<span class="price">
 																				<del aria-hidden="true"><span>$150.00</span></del> 
 																				<ins><span>$100.00</span></ins>
@@ -689,9 +689,9 @@
 																	<div class="products-content">
 																		<div class="contents">
 																			<div class="rating">
-																				<div class="star star-5"></div><span class="count">(1 review)</span>
+																				<div class="star star-5"></div><span class="count">(2 review)</span>
 																			</div>
-																			<h3 class="product-title"><a href="shop-details.html">Medium Flat Hoops</a></h3>
+																			<h3 class="product-title"><a href="shop-details.html">Bracelets</a></h3>
 																			<span class="price">
 																				<del aria-hidden="true"><span>$150.00</span></del> 
 																				<ins><span>$140.00</span></ins>
@@ -764,8 +764,8 @@
 														<div class="item item-product-cat slick-slide">	
 															<div class="item-product-cat-content">
 																<a href="shop-grid-left.html">
-																	<div class="item-image animation-horizontal">
-																		<img  width="200px" height="200px" src="assets/img/pexels-yugdas-manandhar-2155319.jpg" alt="Charms">
+																	<div class="item-image animation-horizonta l">
+																		<img  style="height: 200px;" src="assets/img/pexels-yugdas-manandhar-2155319.jpg" alt="Charms">
 																	</div>
 																</a>			
 																<div class="product-cat-content-info">
@@ -1204,7 +1204,7 @@
 		                       		</td>
 			                        <td class="wishlist-item-info">
 										<div class="wishlist-item-name">
-											<a href="shop-details.html">Twin Hoops</a>
+											<a href="shop-details.html">Ear rings</a>
 										</div>
 										<div class="wishlist-item-price">
 											<span>$150.00</span>
@@ -1231,7 +1231,7 @@
 		                       		</td>
 			                        <td class="wishlist-item-info">
 										<div class="wishlist-item-name">
-											<a href="shop-details.html">Yilver And Turquoise Earrings</a>
+											<a href="shop-details.html">Platinum rings</a>
 										</div>
 										<div class="wishlist-item-price">
 											<del aria-hidden="true"><span>$150.00</span></del> 
@@ -1284,13 +1284,13 @@
                     						<a href="#" class="compare-table-settings">Settings</a>
                     					</th>
                     					<th>
-                    						<a href="shop-details.html">Twin Hoops</a> <span class="remove">remove</span>
+                    						<a href="shop-details.html">Earrings</a> <span class="remove">remove</span>
                     					</th>
                     					<th>
-                    						<a href="shop-details.html">Medium Flat Hoops</a> <span class="remove">remove</span>
+                    						<a href="shop-details.html">Dollar</a> <span class="remove">remove</span>
                     					</th>
                     					<th>
-                    						<a href="shop-details.html">Bold Pearl Hoop Earrings</a> <span class="remove">remove</span>
+                    						<a href="shop-details.html">Platinum earrings</a> <span class="remove">remove</span>
                     					</th>
                     				</tr>
                     			</thead>
@@ -1418,7 +1418,7 @@
 								</div> 
 								<div class="quickview-single-info">
 									<div class="product-content-detail entry-summary">
-										<h1 class="product-title entry-title">Twin Hoops</h1>
+										<h1 class="product-title entry-title">Earrings</h1>
 										<div class="price-single">
 											<div class="price">
 												<del><span>$150.00</span></del>
