--- a/caketheme.com/html/mojuri/page-contact.html
+++ b/caketheme.com/html/mojuri/page-contact.html
@@ -327,7 +327,7 @@
 										<!-- Block Contact Map -->
 										<div class="block block-contact-map">
 											<div class="block-widget-wrap">
-												<iframe src="https://maps.google.com/maps?q=London%20Eye%2C%20London%2C%20United%20Kingdom&amp;t=m&amp;z=10&amp;output=embed&amp;iwloc=near" aria-label="London Eye, London, United Kingdom"></iframe>
+												<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d250571.12424312442!2d76.8316431!3d11.1004201!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba8f83350b6be39%3A0xd5e7ea7227568ae2!2sSNS%20College%20of%20Engineering%20(Autonomous)!5e0!3m2!1sen!2sin!4v1701925481193!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 											</div>
 										</div>
 									</div>
@@ -352,7 +352,7 @@
 																	<h2>Phone</h2>
 																</div>
 																<div class="item-content">
-																	810.222.5439
+																	9791566269
 																</div>
 															</div>
 														</div>
@@ -363,7 +363,7 @@
 																</div>
 																<div class="item-content">
 																	<p>Monday to Friday</p>
-																	<p>8:00am – 4:00pm Sydney, NSW time (UTC +10)</p>
+																	<p>8:00am – 4:00pm Coimbatore</p>
 																	<p>Saturday and Sunday closed</p>
 																</div>
 															</div>
@@ -374,7 +374,7 @@
 																	<h2>Returns</h2>
 																</div>
 																<div class="item-content small-width">
-																	For information on Returns and Refunds, please click <a href="#">here.</a>
+																	For information on Returns and Refunds, please click <a href="tel:9791566269">here.</a>
 																</div>
 															</div>
 														</div>
@@ -395,7 +395,7 @@
 													<div class="sub-title">We’ll get back to you within two days.</div>
 												</div>
 												<div class="block-content">
-													<form action="#" method="post" class="contact-form" novalidate="novalidate">
+													<form action="mailto:kp086719@gmail.com" method="post" class="contact-form" novalidate="novalidate">
 														<div class="contact-us-form">
 															<div class="row">
 																<div class="col-sm-12 col-md-6">
