--- a/caketheme.com/html/mojuri/shop-checkout.html
+++ b/caketheme.com/html/mojuri/shop-checkout.html
@@ -7,7 +7,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Shop Checkout | Mojuri</title>
+		<title>Shop Checkout | virtual Try On</title>
 		
 		<!-- Favicon -->
 		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.png">
