--- a/caketheme.com/html/mojuri/page-contact.html
+++ b/caketheme.com/html/mojuri/page-contact.html
@@ -363,7 +363,7 @@
 																</div>
 																<div class="item-content">
 																	<p>Monday to Friday</p>
-																	<p>8:00am – 4:00pm Sydney, NSW time (UTC +10)</p>
+																	<p>8:00am – 4:00pm Sydney, NSW time (IST +5.30)</p>
 																	<p>Saturday and Sunday closed</p>
 																</div>
 															</div>
