--- a/caketheme.com/html/mojuri/index.html
+++ b/caketheme.com/html/mojuri/index.html
@@ -148,10 +148,10 @@
 										<div class="site-navigation left">
 											<nav id="main-navigation">
 												<ul id="menu-main-menu" class="menu">
-													<li class="level-0 menu-item menu-item-has-children current-menu-item">
+													<li class="level-0 menu-item  current-menu-item">
 														<a href="index.html"><span class="menu-item-text">Home</span></a>
 													</li>
-													<li class="level-0 menu-item menu-item-has-children">
+													<li class="level-0 menu-item ">
 														<a href="shop-grid-left.html"><span class="menu-item-text">Shop</span></a>
 															</li>
 																											<li class="level-0 menu-item">
@@ -174,7 +174,7 @@
 														<a href="cam.html"><span class="menu-item-text">Try Now</span></a>
 													</li>
 													
-													<li class="level-0 menu-item menu-item-has-children">
+													<li class="level-0 menu-item ">
 														<a href="#"><span class="menu-item-text">Pages</span></a>
 														<ul class="sub-menu">
 															
