--- a/caketheme.com/html/mojuri/shop-grid-left.html
+++ b/caketheme.com/html/mojuri/shop-grid-left.html
@@ -148,7 +148,7 @@
 										<div class="site-navigation">
 											<nav id="main-navigation">
 												<ul id="menu-main-menu" class="menu">
-													<li class="level-0 menu-item menu-item-has-children current-menu-item">
+													<li class="level-0 menu-item  current-menu-item">
 														<a href="index.html"><span class="menu-item-text">Home</span></a>
 														
 													</li>
