--- a/caketheme.com/html/mojuri/shop-grid-left.html
+++ b/caketheme.com/html/mojuri/shop-grid-left.html
@@ -310,11 +310,11 @@
 							<div class="section-container">
 								<div class="content-title-heading">
 									<h1 class="text-title-heading">
-										Bracelets
+										Jewellery
 									</h1>
 								</div>
 								<div class="breadcrumbs">
-									<a href="index-2.html">Home</a><span class="delimiter"></span><a href="shop-grid-left.html">Shop</a><span class="delimiter"></span>Bracelets
+									<a href="index-2.html">Home</a><span class="delimiter"></span><a href="shop-grid-left.html">Shop</a><span class="delimiter"></span>Jewellery
 								</div>
 							</div>
 						</div>
