--- a/caketheme.com/html/mojuri/index.html
+++ b/caketheme.com/html/mojuri/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	
-<!-- Mirrored from caketheme.com/html/mojuri/index2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Dec 2023 12:14:09 GMT -->
+<!-- Mirrored from caketheme.com/html/mojuri/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Dec 2023 12:14:09 GMT -->
 <head>
 		<!-- Meta Data -->
 		<meta charset="UTF-8">
@@ -46,7 +46,7 @@
 								</div>
 								<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-6 header-center">
 									<div class="site-logo">
-										<a href="index2.html">
+										<a href="index.html">
 											<img width="400" height="79" src="assets/img/logoofvirtualtryon-removebg-preview.png" alt="Mojuri – Jewelry Store HTML Template" />
 										</a>
 									</div>
@@ -1496,5 +1496,5 @@
 		<script src="assets/js/app.js"></script>
 	</body>
 
-<!-- Mirrored from caketheme.com/html/mojuri/index2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Dec 2023 12:14:15 GMT -->
+<!-- Mirrored from caketheme.com/html/mojuri/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Dec 2023 12:14:15 GMT -->
 </html>
