--- a/caketheme.com/html/mojuri/page-faq.html
+++ b/caketheme.com/html/mojuri/page-faq.html
@@ -47,7 +47,7 @@
 								</div>
 								<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-6 header-center">
 									<div class="site-logo">
-										<a href="index-2.html">
+										<a href="index.html ">
 											<img width="400" height="79" src="assets/img/logoofvirtualtryon-removebg-preview.png" alt="Mojuri – Jewelry Store HTML Template" />
 										</a>
 									</div>
@@ -138,7 +138,7 @@
 								<div class="row">
 									<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 header-left">
 										<div class="site-logo">
-											<a href="index-2.html">
+											<a href="index.html ">
 												<img width="400" height="140" src="assets/img/logoofvirtualtryon-removebg-preview.png" alt="Mojuri – Jewelry Store HTML Template" />
 											</a>
 										</div>
@@ -314,7 +314,7 @@
 									</h1>
 								</div>
 								<div class="breadcrumbs">
-									<a href="index-2.html">Home</a><span class="delimiter"></span>Frequently Asked Questions
+									<a href="index.html ">Home</a><span class="delimiter"></span>Frequently Asked Questions
 								</div>
 							</div>
 						</div>
