--- a/caketheme.com/html/mojuri/index.html
+++ b/caketheme.com/html/mojuri/index.html
@@ -152,7 +152,7 @@
 														<a href="index.html"><span class="menu-item-text">Home</span></a>
 													</li>
 													<li class="level-0 menu-item ">
-														<a href="shop-grid-left.html"><span class="menu-item-text">Shop</span></a>
+														<a href="page-about.html"><span class="menu-item-text">About us</span></a>
 															</li>
 																											<li class="level-0 menu-item">
 														<a href="shop-grid-left.html"><span class="menu-item-text">Product</span></a>
@@ -175,7 +175,7 @@
 													</li>
 													
 													<li class="level-0 menu-item ">
-														<a href="#"><span class="menu-item-text">Pages</span></a>
+														<a href="shop-grid-left.html"><span class="menu-item-text">Shop</span></a>
 														<ul class="sub-menu">
 															
 															<li>
