--- a/caketheme.com/html/mojuri/index.html
+++ b/caketheme.com/html/mojuri/index.html
@@ -1016,7 +1016,7 @@
 					<div class="section-padding">
 						<div class="section-container">
 							<div class="block-widget-wrap">
-								<div class="row">
+								<div class="row" style="display: flex; align-items: center; justify-content: space-between;">
 									<div class="col-lg-3 col-md-6">
 										<div class="block block-menu m-b-20">
 											<h2 class="block-title">Contact Us</h2>
@@ -1073,24 +1073,24 @@
 									</div> -->
 									<div class="col-lg-3 col-md-6">
 										<div class="block block-menu">
-											<h2 class="block-title">About Us</h2>
+											<h2 class="block-title">Quick Links</h2>
 											<div class="block-content">
 												<ul>
 													<li>
-														<a href="#">About Us</a>
+														<a href="index.html">Home</a>
 													</li>
 													<li>
-														<a href="#">FAQ</a>
+														<a href="page-about.html">About Us</a>
 													</li>
 													<li>
-														<a href="#">Our Producers</a>
+														<a href="shop-grid-left.html">shop</a>
 													</li>
 													
 													<li>
-														<a href="#">Terms & Conditions</a>
+														<a href="cam.html">Try On</a>
 													</li>
 													<li>
-														<a href="#">Privacy Policy</a>
+														<a href="page-contact.html">Contact</a>
 													</li>
 												</ul>
 											</div>
@@ -1128,24 +1128,9 @@
 						</div>
 					</div>
 				</div> -->
-				<div class="footer-bottom">
-					<div class="section-padding">
-						<div class="section-container">
-							<div class="block-widget-wrap">
-								<div class="row">
-									<div class="col-md-6">
-										<div class="footer-left">
-											<p class="copyright">Copyright © 2023 All Right Reserved by virtual try on</p>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="footer-right">
-											
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+				</div>
+				<div style="display: flex; align-items: center;justify-content: center;">
+					<p class="copyright">Copyright © 2023 All Right Reserved by VirtualTryon</p>
 					</div>
 				</div>
 			</footer>
