--- a/caketheme.com/html/mojuri/cam.html
+++ b/caketheme.com/html/mojuri/cam.html
@@ -312,7 +312,7 @@
   <button id="tryOnButton">Toggle Overlay</button>
   <img id="overlay" width="640" height="480" style="display: none;" alt="Necklace Overlay">
   <button class="necklace-button" data-srcaketheme.com="">Necklace 1</button>
-  <button class="necklace-button" data-src="path_to_necklace_image2.jpg">Necklace 2</button>
+  <button class="necklace-button" data-src="path_to_necklace_image2.jpg"><img src="assets/img/download.jpeg" alt=""></button>
   <!-- Add more buttons as needed -->
    <script>
     const video = document.getElementById('video');
