--- a/caketheme.com/html/mojuri/shop-checkout.html
+++ b/caketheme.com/html/mojuri/shop-checkout.html
@@ -333,20 +333,20 @@
 															<div class="billing-fields-wrapper">
 																<p class="form-row form-row-first validate-required">
 																	<label>First name <span class="required" title="required">*</span></label>
-																	<span class="input-wrapper"><input type="text" class="input-text" name="billing_first_name" value=""></span>
+																	<span class="input-wrapper"><input type="text" class="input-text" name="name" value=""></span>
 																</p>
 																<p class="form-row form-row-last validate-required">
 																	<label>Last name <span class="required" title="required">*</span></label>
-																	<span class="input-wrapper"><input type="text" class="input-text" name="billing_last_name" value=""></span>
+																	<span class="input-wrapper"><input type="text" class="input-text" name="lname" value=""></span>
 																</p>
 																<p class="form-row form-row-wide">
 																	<label>Company name <span class="optional">(optional)</span></label>
-																	<span class="input-wrapper"><input type="text" class="input-text" name="billing_company" value=""></span>
+																	<span class="input-wrapper"><input type="text" class="cname" name="billing_company" value=""></span>
 																</p>
 																<p class="form-row form-row-wide validate-required">
 																	<label>Country / Region <span class="required" title="required">*</span></label>
 																	<span class="input-wrapper">
-																		<select name="billing_country" class="country-select custom-select">
+																		<select name="country" class="country-select custom-select">
 																			<option value="">Select a country / region…</option>
 																			<option value="AF">Afghanistan</option>
 																			<option value="AX">Åland Islands</option>
