--- a/caketheme.com/html/mojuri/shop-checkout.html
+++ b/caketheme.com/html/mojuri/shop-checkout.html
@@ -346,7 +346,7 @@
 																<p class="form-row form-row-wide validate-required">
 																	<label>Country / Region <span class="required" title="required">*</span></label>
 																	<span class="input-wrapper">
-																		<select name="country" class="country-select custom-select">
+																		<select name="billing_country" class="country-select custom-select">
 																			<option value="">Select a country / region…</option>
 																			<option value="AF">Afghanistan</option>
 																			<option value="AX">Åland Islands</option>
