--- a/caketheme.com/html/mojuri/shop-checkout.html
+++ b/caketheme.com/html/mojuri/shop-checkout.html
@@ -324,7 +324,7 @@
 							<div class="section-padding">
 								<div class="section-container p-l-r">
 									<div class="shop-checkout">
-										<form name="checkout" method="post" class="checkout" action="#" autocomplete="off">
+										<form name="checkout.php" method="post" class="checkout" action="#" autocomplete="off">
 											<div class="row">
 												<div class="col-xl-8 col-lg-7 col-md-12 col-12">
 													<div class="customer-details">
@@ -346,7 +346,6 @@
 																<p class="form-row form-row-wide validate-required">
 																	<label>Country / Region <span class="required" title="required">*</span></label>
 																	<span class="input-wrapper">
-																		<select name="billing_country" class="country-select custom-select">
 																			<option value="">Select a country / region…</option>
 																			<option value="AF">Afghanistan</option>
 																			<option value="AX">Åland Islands</option>
@@ -512,6 +511,7 @@
 														</p>
 													</div>
 												</div>
+
 												<div class="col-xl-4 col-lg-5 col-md-12 col-12">
 													<div class="checkout-review-order">
 														<div class="checkout-review-order-table">
