--- a/caketheme.com/html/mojuri/shop-checkout.html
+++ b/caketheme.com/html/mojuri/shop-checkout.html
@@ -324,7 +324,7 @@
 							<div class="section-padding">
 								<div class="section-container p-l-r">
 									<div class="shop-checkout">
-										<form name="checkout" method="post" class="checkout" action="#" autocomplete="off">
+										<form name="checkout.php" method="post" class="checkout" action="#" autocomplete="off">
 											<div class="row">
 												<div class="col-xl-8 col-lg-7 col-md-12 col-12">
 													<div class="customer-details">
