--- a/caketheme.com/html/mojuri/page-contact.html
+++ b/caketheme.com/html/mojuri/page-contact.html
@@ -219,7 +219,7 @@
 																</form>
 															</div>
 															<div class="form-register">
-																<form method="post" class="register">
+																<form action="contact.php"  method="post" class="register">
 																	<h2>REGISTER</h2>
 																	<div class="content">
 																		<div class="email">
