--- a/caketheme.com/html/mojuri/index.html
+++ b/caketheme.com/html/mojuri/index.html
@@ -364,7 +364,7 @@
 												<div class="item-info horizontal-center vertical-middle text-center">
 													<div class="content">
 														<div class="subtitle-slider">30% OFF ALL ORDER</div>
-														<h2 class="title-slider">Oh, Hello Newness!</h2>
+														<h2 class="title-slider">All collections available</h2>
 														<a class="button button-slider button-black" href="shop-grid-left.html">SHOP NOW</a>
 													</div>
 												</div>
@@ -383,7 +383,7 @@
 												<img width="120" height="107" src="media/banner/intro-2.png" alt="">
 											</div>
 											<h2 class="intro-title">
-										 		JEWERLY
+										 		JEWELLERY
 											</h2>
 											<div class="intro-text">
 												Our beautiful jewelry pieces combine make every moment radiant and memorable.jewellery collection that transforms any occasion into a celebration of style and grace.
