--- a/caketheme.com/html/mojuri/shop-grid-left.html
+++ b/caketheme.com/html/mojuri/shop-grid-left.html
@@ -459,7 +459,7 @@
 																			<div class="rating">
 																				<div class="star star-0"></div><span class="count">(0 review)</span>
 																			</div>
-																			<h3 class="product-title"><a href="shop-details.html">Medium Flat Hoops</a></h3>
+																			<h3 class="product-title"><a href="shop-details.html">Gold ring</a></h3>
 																			<span class="price">$150.00</span>
 																		</div>
 																	</div>
@@ -497,7 +497,7 @@
 																			<div class="rating">
 																				<div class="star star-5"></div><span class="count">(1 review)</span>
 																			</div>
-																			<h3 class="product-title"><a href="shop-details.html">Yilver And Turquoise Earrings</a></h3>
+																			<h3 class="product-title"><a href="shop-details.html">Daimond rings</a></h3>
 																			<span class="price">
 																				<del aria-hidden="true"><span>$150.00</span></del> 
 																				<ins><span>$100.00</span></ins>
@@ -574,7 +574,7 @@
 																			<div class="rating">
 																				<div class="star star-4"></div><span class="count">(2 reviews)</span>
 																			</div>
-																			<h3 class="product-title"><a href="shop-details.html">Bora Armchair</a></h3>
+																			<h3 class="product-title"><a href="shop-details.html">Dollar</a></h3>
 																			<span class="price">
 																				<del aria-hidden="true"><span>$150.00</span></del> 
 																				<ins><span>$100.00</span></ins>
@@ -696,7 +696,7 @@
 																			<div class="rating">
 																				<div class="star star-0"></div><span class="count">(0 review)</span>
 																			</div>
-																			<h3 class="product-title"><a href="shop-details.html">Yilver And Turquoise Earrings</a></h3>
+																			<h3 class="product-title"><a href="shop-details.html">Daimond rings</a></h3>
 																			<span class="price">$120.00</span>
 																		</div>
 																	</div>
@@ -735,7 +735,7 @@
 																			<div class="rating">
 																				<div class="star star-5"></div><span class="count">(3 review)</span>
 																			</div>
-																			<h3 class="product-title"><a href="shop-details.html">X Hoop Earrings</a></h3>
+																			<h3 class="product-title"><a href="shop-details.html">Long Earing</a></h3>
 																			<span class="price">
 																				<del aria-hidden="true"><span>$200.00</span></del> 
 																				<ins><span>$180.00</span></ins>
@@ -776,7 +776,7 @@
 																			<div class="rating">
 																				<div class="star star-4"></div><span class="count">(1 review)</span>
 																			</div>
-																			<h3 class="product-title"><a href="shop-details.html">Yintage Medallion Necklace</a></h3>
+																			<h3 class="product-title"><a href="shop-details.html">Necklace</a></h3>
 																			<span class="price">$140.00</span>
 																		</div>
 																	</div>
@@ -807,7 +807,7 @@
 																</div>
 																<div class="col-md-8">
 																	<div class="products-content">
-																		<h3 class="product-title"><a href="shop-details.html">Medium Flat Hoops</a></h3>
+																		<h3 class="product-title"><a href="shop-details.html">Gold ring</a></h3>
 																		<span class="price">$150.00</span>
 																		<div class="rating">
 																			<div class="star star-5"></div>
@@ -851,7 +851,7 @@
 																</div>
 																<div class="col-md-8">
 																	<div class="products-content">
-																		<h3 class="product-title"><a href="shop-details.html">Yilver And Turquoise Earrings</a></h3>
+																		<h3 class="product-title"><a href="shop-details.html">Daimond rings</a></h3>
 																		<span class="price">
 																			<del aria-hidden="true"><span>$150.00</span></del> 
 																			<ins><span>$100.00</span></ins>
@@ -942,7 +942,7 @@
 																</div>
 																<div class="col-md-8">
 																	<div class="products-content">
-																		<h3 class="product-title"><a href="shop-details.html">Bora Armchair</a></h3>
+																		<h3 class="product-title"><a href="shop-details.html">Dollar</a></h3>
 																		<span class="price">
 																			<del aria-hidden="true"><span>$120.00</span></del> 
 																			<ins><span>$100.00</span></ins>
@@ -1083,7 +1083,7 @@
 																</div>
 																<div class="col-md-8">
 																	<div class="products-content">
-																		<h3 class="product-title"><a href="shop-details.html">Yilver And Turquoise Earrings</a></h3>
+																		<h3 class="product-title"><a href="shop-details.html">Daimond rings</a></h3>
 																		<span class="price">$120.00</span>
 																		<div class="rating">
 																			<div class="star star-4"></div>
@@ -1127,7 +1127,7 @@
 																</div>
 																<div class="col-md-8">
 																	<div class="products-content">
-																		<h3 class="product-title"><a href="shop-details.html">X Hoop Earrings</a></h3>
+																		<h3 class="product-title"><a href="shop-details.html">LLong Earing</a></h3>
 																		<span class="price">
 																			<del aria-hidden="true"><span>$200.00</span></del> 
 																			<ins><span>$180.00</span></ins>
@@ -1174,7 +1174,7 @@
 																</div>
 																<div class="col-md-8">
 																	<div class="products-content">
-																		<h3 class="product-title"><a href="shop-details.html">Yintage Medallion Necklace</a></h3>
+																		<h3 class="product-title"><a href="shop-details.html">Necklace</a></h3>
 																		<span class="price">$140.00</span>
 																		<div class="rating">
 																			<div class="star star-5"></div>
@@ -1423,7 +1423,7 @@
 		                       		</td>
 			                        <td class="wishlist-item-info">
 										<div class="wishlist-item-name">
-											<a href="shop-details.html">Yilver And Turquoise Earrings</a>
+											<a href="shop-details.html">Daimond rings</a>
 										</div>
 										<div class="wishlist-item-price">
 											<del aria-hidden="true"><span>$150.00</span></del> 
@@ -1479,7 +1479,7 @@
                     						<a href="shop-details.html">Wedding ring</a> <span class="remove">remove</span>
                     					</th>
                     					<th>
-                    						<a href="shop-details.html">Medium Flat Hoops</a> <span class="remove">remove</span>
+                    						<a href="shop-details.html">Gold ring</a> <span class="remove">remove</span>
                     					</th>
                     					<th>
                     						<a href="shop-details.html">premium Earring</a> <span class="remove">remove</span>
