--- a/caketheme.com/html/mojuri/page-about.html
+++ b/caketheme.com/html/mojuri/page-about.html
@@ -528,9 +528,9 @@
 																			<div class="star star-5"></div>
 																		</div>
 																	</div>
-																	<h2 class="testimonial-title">“Amazing piece of history”</h2>
+																	<h2 class="testimonial-title">“Worth of price”</h2>
 																	<div class="testimonial-excerpt">
-																		Blood bank canine teeth larynx occupational therapist oncologist optician plaque spinal tap stat strep... 
+																		"expectional value where quality meets affordability" 
 																	</div>								
 																</div>
 																<div class="testimonial-image image-position-top">
@@ -538,7 +538,7 @@
 																		<img width="110" height="110" src="media/testimonial/1.jpg" alt="">							
 																	</div>
 																	<div class="testimonial-info">
-																		<h2 class="testimonial-customer-name">Robet Smith</h2>
+																		<h2 class="testimonial-customer-name">suba</h2>
 																	</div>
 																</div>
 															</div>
@@ -553,7 +553,7 @@
 																	</div>
 																	<h2 class="testimonial-title">“Fabulous Grounds”</h2>
 																	<div class="testimonial-excerpt">
-																		Blood bank canine teeth larynx occupational therapist oncologist optician plaque spinal tap stat strep... 
+																		 "Delicate designs for simple designs"
 																	</div>								
 																</div>
 																<div class="testimonial-image image-position-top">
@@ -561,7 +561,7 @@
 																		<img width="110" height="110" src="media/testimonial/2.jpg" alt="">							
 																	</div>
 																	<div class="testimonial-info">
-																		<h2 class="testimonial-customer-name">Saitama One</h2>
+																		<h2 class="testimonial-customer-name">Madhu</h2>
 																	</div>
 																</div>
 															</div>
@@ -574,17 +574,17 @@
 																			<div class="star star-5"></div>
 																		</div>
 																	</div>
-																	<h2 class="testimonial-title">“Great vineyard tour and tasting!”</h2>
+																	<h2 class="testimonial-title">“Great !”</h2>
 																	<div class="testimonial-excerpt">
-																		Blood bank canine teeth larynx occupational therapist oncologist optician plaque spinal tap stat strep... 
+																		"seamless virtual  try on experience,turning curiosity into confidence"
 																	</div>								
 																</div>
 																<div class="testimonial-image image-position-top">
 																	<div class="thumbnail">
-																		<img width="110" height="110" src="media/testimonial/3.jpg" alt="">							
+																		<img width="110" height="110" src="assets/img/2.jpg" alt="">							
 																	</div>
 																	<div class="testimonial-info">
-																		<h2 class="testimonial-customer-name">Sara Colinton</h2>
+																		<h2 class="testimonial-customer-name">jerold</h2>
 																	</div>
 																</div>
 															</div>
@@ -597,17 +597,17 @@
 																			<div class="star star-5"></div>
 																		</div>
 																	</div>
-																	<h2 class="testimonial-title">“Stunning Design”</h2>
+																	<h2 class="testimonial-title">“Stunning ”</h2>
 																	<div class="testimonial-excerpt">
-																		Blood bank canine teeth larynx occupational therapist oncologist optician plaque spinal tap stat strep... 
+																		because of this website is very easy to work
 																	</div>								
 																</div>
 																<div class="testimonial-image image-position-top">
 																	<div class="thumbnail">
-																		<img width="110" height="110" src="media/testimonial/4.jpg" alt="">							
+																		<img width="110" height="110" src="assets/img/1.jpg" alt="">							
 																	</div>
 																	<div class="testimonial-info">
-																		<h2 class="testimonial-customer-name">Shetty Jamie</h2>
+																		<h2 class="testimonial-customer-name">Kishore</h2>
 																	</div>
 																</div>
 															</div>
