--- a/caketheme.com/html/mojuri/page-about.html
+++ b/caketheme.com/html/mojuri/page-about.html
@@ -385,7 +385,7 @@
 												 		Where It All Began
 													</h2>
 													<div class="intro-text">
-											 			Aenean imperdiet. Proin viverra, ligula sit amet ultrices semper, ligula arcu tristique sapien, a accumsan nisi mauris ac eros. Vestibulum fringilla pede sit amet augue. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Fusce fermentum odio nec arcu.Suspendisse faucibus, nunc et pellentesque egestas, lacus ante convallis tellus, vitae iaculis lacus elit id tortor. Sed cursus turpis vitae tortor. Vestibulum eu odio. Sed in libero ut nibh placerat accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+														"Elevate your everyday elegance with our top-notch jewelry selection. From contemporary classics to avant-garde pieces, each creation is a testament to craftsmanship and sophistication, ensuring you shine with distinctive allure at every moment.Discover the epitome of luxury at our jewelry haven, where affordability meets impeccable design"
 													</div>
 												</div>
 											</div>
@@ -403,7 +403,8 @@
 														<div class="intro-wrap">
 															<h2 class="intro-title">We Know Jewellery – <br> & We Know Our Customers</h2>
 															<div class="intro-item m-b-0">
-																Cenean imperdiet. Proin viverra, ligula sit amet ultrices semper, ligula arcu tristique sapien, a accumsan nisi mauris ac eros. Vestibulum fringilla pede sit amet augue. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Fusce fermentum odio nec arcu.
+								                               
+"Dive into a world of unmatched glamour and finesse as you explore our top-tier jewelry curation. From statement pieces that steal the spotlight to delicate adornments that whisper elegance, our collection promises to redefine your personal style with every shimmer and sparkle."
 															</div>
 														</div>
 													</div>
@@ -445,7 +446,8 @@
 												 		 			Shipping Worldwide
 																</h3>
 																<p class="box-description">
-														 			Lorem ipsum dolor sit amet, consectetur adipiscing elit 
+														 			
+"Experience global glamour with our worldwide shipping, bringing exquisite jewelry to your doorstep no matter where you are."
 																</p>
 															</div>
 														</div>
@@ -462,7 +464,7 @@
 												 		 			14 Days Return 
 																</h3>
 																<p class="box-description">
-														 			Lorem ipsum dolor sit amet, consectetur adipiscing elit 
+																	"Shop with confidence – enjoy a hassle-free experience with our 14 days return policy, ensuring your satisfaction is our priority." 
 																</p>
 															</div>
 														</div>
@@ -479,8 +481,8 @@
 												 		 			Security Payment 
 																</h3>
 																<p class="box-description">
-														 			Lorem ipsum dolor sit amet, consectetur adipiscing elit 
-																</p>
+																	"Experience worry-free shopping with our secure payment options, ensuring your transactions are protected at every step."
+														 		</p>
 															</div>
 														</div>
 													</div>
@@ -502,8 +504,8 @@
 													<div class="section-column right">
 														<div class="intro-wrap">
 															<h2 class="intro-title">Top Jewellers at Ice Online</h2>
-															<div class="intro-item m-b-0">
-														 		Cenean imperdiet. Proin viverra, ligula sit amet ultrices semper, ligula arcu tristique sapien, a accumsan nisi mauris ac eros. Vestibulum fringilla pede sit amet augue. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Fusce fermentum odio nec arcu. 
+															<div class="intro-item m-b-0">      
+                                                                "Indulge in opulence with our curated collection of handcrafted jewelry, where each piece tells a unique story of sophistication and style. Elevate your look and embrace the allure of our top-tier jewelry designs that transcend trends and stand the test of time."
 															</div>
 														</div>
 													</div>
@@ -625,7 +627,7 @@
 										<div class="block block-newsletter layout-2 one-col">
 											<div class="block-widget-wrap">
 												<div class="newsletter-title-wrap">
-													<h2 class="newsletter-title">Latest From MoJuri!</h2>
+													<h2 class="newsletter-title">Latest From Virtual tryon</h2>
 													<div class="newsletter-text">Sign-up to receive 10% off your next purchase. Plus hear about new arrivals and offers.</div>
 												</div>
 												<form action="#" method="post" class="newsletter-form">
