--- a/caketheme.com/html/mojuri/shop-checkout.html
+++ b/caketheme.com/html/mojuri/shop-checkout.html
@@ -636,13 +636,14 @@
 											<div class="block-content">
 												<ul>
 													<li>
-														<span>Head Office:</span> 26 Cross Cut Street, Gandhipuram, Coimbatore
+														<span>Head Office:</span> SNS college of Engineering
+														kurumbapalayam
 													</li>
 													<li>
-														<span>Tel:</span> 01743 234500
+														<span>Tel:</span> 9791566269
 													</li>
 													<li>
-														<span>Email:</span> <a href="mailto:support@mojuri.com">support@mojuri.com</a>
+														<span>Email:</span> <a href="mailto:kp086719@gmail.com">kp086719@gmail.com</a>
 													</li>
 												</ul>
 											</div>
@@ -749,7 +750,7 @@
 								<div class="row">
 									<div class="col-md-6">
 										<div class="footer-left">
-											<p class="copyright">Copyright © 2023. All Right Reserved</p>
+											<p class="copyright">Copyright © 2023. All Right Reserved by Virtualtryon</p>
 										</div>
 									</div>
 									<div class="col-md-6">
