--- a/caketheme.com/html/mojuri/cam.html
+++ b/caketheme.com/html/mojuri/cam.html
@@ -49,7 +49,7 @@
               <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-6 header-center">
                 <div class="site-logo">
                   <a href="index.html ">
-                    <img width="400" height="79" src="assets/img/logoofvirtualtryon-removebg-preview.png" alt="Mojuri – Jewelry Store HTML Template" />
+                    <img style="height: 200px; width: 200px;" src="assets/img/logoofvirtualtryon-removebg-preview.png" alt="Mojuri – Jewelry Store HTML Template" />
                   </a>
                 </div>
               </div>
