--- a/caketheme.com/html/mojuri/page-contact.html
+++ b/caketheme.com/html/mojuri/page-contact.html
@@ -395,7 +395,7 @@
 													<div class="sub-title">We’ll get back to you within two days.</div>
 												</div>
 												<div class="block-content">
-													<form action="https://formspree.io/f/xwkdgvpo" method="post" class="contact-form" novalidate="novalidate">
+													<form action="contact.php" method="post" class="contact-form" novalidate="novalidate">
 														<div class="contact-us-form">
 															<div class="row">
 																<div class="col-sm-12 col-md-6">
