--- a/caketheme.com/html/mojuri/cam.html
+++ b/caketheme.com/html/mojuri/cam.html
@@ -226,7 +226,7 @@
                                     <input type="email" class="input-text" placeholder="Email" name="email" id="reg_email" value=""/>
                                   </div>
                                   <div class="password">
-                                    <input type="password" class="input-text" placeholder="Password" name="password" id="reg_password"/>
+                                    <input type="password" class="input-text" placeholder="Passwol̥ōrd" name="password" id="reg_password"/>
                                   </div>															
                                   <div class="button-register">
                                     <input type="submit" class="button" name="register" value="Register"/>
