--- a/caketheme.com/html/mojuri/index.html
+++ b/caketheme.com/html/mojuri/index.html
@@ -404,9 +404,9 @@
 														<div class="block-widget-banner layout-3">
 															<div class="bg-banner">
 																<div class="banner-wrapper banners">
-																	<div class="banner-image">
+																	<div class="">
 																		<a href="shop-grid-left.html">
-																			<img width="527" height="737" src="assets/img/girl 2" alt="Banner Image">
+																			<img style="height: 400px; transform: translate() ;" src="assets/img/girl 2" alt="Banner Image">
 																		</a>
 																	</div>
 																	<div class="banner-wrapper-infor">
@@ -432,7 +432,7 @@
 																<div class="banner-wrapper banners">
 																	<div class="banner-image">
 																		<a href="shop-grid-left.html">
-																			<img width="250px" height="700px" src="assets/img/girl" alt="Banner Image">
+																			<img style="height: 300px;"src="assets/img/girl" alt="Banner Image">
 																		</a>
 																	</div>
 																	<div class="banner-wrapper-infor">
